# face_recognition_system

./: .gitignore  ACADEMIC_SUMMARY.md  COMPLETION_REPORT.md  CORE_FEATURES_COMPLETE.md  DEFECT_REPORT.md  DEVELOPMENT_COMPLETE.md  Dockerfile  EXECUTION_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_PROGRESS.md  GITHUB_SETUP.md  INFERENCE_TEST_REPORT.md  M1_GUIDE.md  MODEL_FIXES.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  REVIEW_AND_REMAINING.md  RTX4090_GUIDE.md  TECH_BOUNDARY.md  TRAINING_REPORT.md  WORK_COMPLETED.md  check_format.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
api/: main.py
configs/: default.yaml
configs/deployment/: infer.yaml
configs/detection/: train.yaml
configs/recognition/: train.yaml
data/datasets/: __init__.py  loader.py  widerface_loader.py
data/transforms/: __init__.py  alignment.py  augmentation.py  frequency.py
deployment/: build_tensorrt.py  export_onnx.py
engine/: evaluator.py
inference/: __init__.py  detector.py  matcher.py  pipeline.py  recognizer.py
inference/index/: hnsw_index.py
models/common/: __init__.py  attention.py  backbone_utils.py  dcnv2.py  utils.py
models/detection/: __init__.py  backbone.py  complete_loss.py  (+5 more)
scripts/: auto_train.py  setup_env.bat  setup_env.sh  train.sh  train_4090.sh  train_m1.sh
tests/: conftest.py
tools/: check_env.py  download_datasets.py  evaluate.py  export_model.py  finetune.py  prepare_datasets.py  test_inference.py  train_detection.py  train_detection_complete.py  train_detection_full.py  train_detection_simple.py  train_recognition.py  train_recognition_complete.py  train_recognition_v2.py
web/: README.md  app.py  flask_app.py  index.html  requirements.txt  start.bat  test_app.py
(+47 files in other folders)
